fixed spacing

--- a/courses/csis180-f24/javajamsWriteup/css/styles.css
+++ b/courses/csis180-f24/javajamsWriteup/css/styles.css
@@ -86,8 +86,9 @@ code {
 .example {
   display: flex;
   flex-direction: row;
-  width: 300px;
+  width: 200px;
   margin: 20px 0;
+  height: 300px;
   
 }
 
